style.css
*,*::after,*::before{
  box-sizing: border-box;
}

@font-face {
  font-family: 'handwriting';
  src: url('fonts/journal-webfont.woff2') format('woff2'),
       url('fonts/journal-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'typewriter';
  src: url('fonts/veteran_typewriter-webfont.woff2') format('woff2'),
       url('fonts/veteran_typewriter-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

body {
font  : 1.3rem sans-serif;
padding : 0.5em;
margin  : 0;
background : #222;
}

form {
position : relative;
width  : 740px;
height : 498px;
margin : 0 auto;
padding: 1em;
box-sizing: border-box;
background : #FFF url(./images/placeholder-background.jpg);

/* we create our grid */
display  : grid;
grid-gap : 20px;
grid-template-columns : repeat(2, 1fr);
grid-template-rows    : 10em 1em 1em 1em;
}

#to {

align-self : end;
}

#to > label{
  font : 1em "typewriter", monospace;
}

#message {
 grid-row: 1 / 5;
}

#from, #reply {
 display: flex;
}

label {
font : .8em "typewriter", sans-serif;
}

input,
textarea,
.textarea-copy {
font    : 1.4em/1.5em "handwriting", cursive, sans-serif;
border  : none;
padding : 0 10px;
margin  : 0;
width   : 80%;
background : none;
}

input:focus,
textarea:focus {
background   : rgba(0,0,0,.1);
border-radius: 5px;
}

textarea,
.textarea-copy {
display : block;

padding : 10px;
margin  : 10px 0 0 -10px;
width   : 100%;
height  : 90%;

border-right: 1px solid;

/* resize  : none; */
overflow: auto;
}

#save-button {
padding      : 5px;
font         : bold .6em sans-serif;
border       : 2px solid #333;
border-radius: 5px;
background   : none;
cursor       : pointer;
transform    : rotate(-1.5deg);
}

#save-button:after {
content      : " >>>";
}

#save-button:hover,
#save-button:focus {
outline     : none;
background  : #000;
color       : #FFF;
}

.invisible{
  background: transparent;
  border: none !important;
  font-size:0;
}

/* 
  Popup styles
*/

.modal{
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  transition: 200ms ease-in-out;
  border: 1px solid black;
  border-radius: 20px;
  z-index: 10;
  background-color: white;
  width: 900px;
  max-width: 80%;
}

.modal.active{
  transform: translate(-50%, -50%) scale(1);
}

.modal-header{
  padding: 20px 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
}

.modal-header .title{
  font-weight: bold;
  font-size: 1.5rem;
}

.modal-header .close-button{
  cursor: pointer;
  border: none;
  outline: none;
  background: none;

  font-size: 1.25rem;
  font-weight: bold;
}

.modal-body{
  padding: 20px 30px;
}

.modal-foot{
  padding: 20px 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-top: 1px solid black;
}

#overlay{
  position: fixed;
  opacity: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 70%);
  pointer-events: none;
  transition: 200ms ease-in-out;
}

#overlay.active{
  pointer-events: all;
  opacity: 1;
}

